--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,16 @@ after_success:
   - docker push makuat/multi-nginx
   - docker push makuat/multi-server
   - docker push makuat/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-central-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-eu-central-1-371107543817"
+  bucket-apth: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
